end of login page design. and launcher activity is login page

--- a/AIUBStudent/app/src/main/AndroidManifest.xml
+++ b/AIUBStudent/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@drawable/app_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
