--- a/AIUBStudent/app/src/main/AndroidManifest.xml
+++ b/AIUBStudent/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@drawable/app_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".Login">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        
+        <activity android:name=".Login"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
