--- a/AIUBStudent/app/build.gradle
+++ b/AIUBStudent/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
 
 
 }
