--- a/AIUBStudent/app/build.gradle
+++ b/AIUBStudent/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'com.android.volley:volley:1.1.1'
+
+
 
 
 
