--- a/AIUBStudent/app/build.gradle
+++ b/AIUBStudent/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
 
 
