--- a/AIUBStudent/app/build.gradle
+++ b/AIUBStudent/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -36,6 +37,8 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
+
 
 
 
