--- a/AIUBStudent/app/build.gradle
+++ b/AIUBStudent/app/build.gradle
@@ -38,10 +38,13 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
-
-
+    implementation 'com.google.firebase:firebase-core:17.5.1'
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation 'com.google.firebase:firebase-analytics'
 
 
 
 
 }
+
+apply plugin: 'com.google.gms.google-services'
